# learn-opengl

./: .gitignore  CMakeLists.txt  Makefile  basic.frag  basic.vert  build.sh  build.zig  build.zig.zon  compile_commands.json  main.c  main.odin  meson.build  program.c  program.h  sakana.c  sakana.h  sakana_gfx.c  sakana_gfx.h  sakana_math.c  sakana_math.h
sakana/: build.zig
sakana/src/: gl.zig  glfw.zig  root.zig  shader.zig
src/: basic.frag  index_buffer.zig  main.cpp  main.zig  renderer.zig  types.hpp  vertex_array.zig  vertex_buffer.zig  vertex_buffer_layout.zig
subprojects/glad/: meson.build
subprojects/glad/include/glad/: gl.h
subprojects/stb/: meson.build
